Fix API RD and Event